...
            onClick = onDecrementDay,
            enabled = canDecrement,
            modifier = Modifier.alpha(if (canDecrement) 1f else 0f)
        ) {
            Icon(
                imageVector = Icons.AutoMirrored.Filled.KeyboardArrowLeft,
                contentDescription = "Previous Day",
            )
        }
        days.forEach { day ->
            Column(
                horizontalAlignment = Alignment.CenterHorizontally,
                modifier = Modifier.weight(1f)
...
            onClick = onIncrementDay,
            enabled = canIncrement,
            modifier = Modifier.alpha(if (canIncrement) 1f else 0f)
        ) {
            Icon(
                imageVector = Icons.AutoMirrored.Filled.KeyboardArrowRight,
                contentDescription = "Next Day",
            )
        }
    }
}

@Composable
...
